# asmbly-data-dashboard

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  compose.override.yaml  compose.prod.yaml  compose.yaml  engine.py  main.py  pyproject.toml  schema.py
caddy/: Caddyfile
cron_service/: Dockerfile  Dockerfile.dev  churn_seed.py  crontab  daily_membership_update.py  daily_risk_update.py  entrypoint.sh  membership_counts_seed.py  zip_code_seed.py
cron_service/helpers/: api_exponential_backoff.py  default_dataframe.py  enums.py  get_neon_data.py  neon_creds.py  neon_dataclasses.py  survival_model.py
dash_data_dashboard/: Dockerfile.dev  entrypoint.sh
dash_data_dashboard/assets/: app.css
dash_data_dashboard/src/components/: active_members_card.py  active_members_plot.py  active_members_plot_date_range.py  breakpoints.py  churn_risk_table.py  churn_table_emailed_toggle.py  churn_table_search.py  churn_table_sort_by.py  churn_table_sort_direction.py  churn_table_submit.py  churns_and_join_plot_avg.py  churns_and_joins.py  churns_and_joins_plot.py  header.py  ids.py  layout.py  zcta_chloropleth.py  zcta_multiselect.py
dash_data_dashboard/src/data/: geojson_cleanup.py  tx_zip_codes_geo_min.json
dash_data_dashboard/src/data/dash/: loader.py
dash_data_dashboard/src/data/dash_data/: loader.py
dash_data_dashboard/src/data/database/: membership_counts_seed.py  seed.py
