[tool.poetry]
name = "asmbly-data-dashboard"
version = "0.1.0"
description = "High level overview of Asmbly member data built with Dash and Plotly. Includes churn risk ML model for identifying members for interventions."
authors = ["Matthew Miller <matthew.miller@asmbly.org>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
dash = "^2.16.1"
dash-mantine-components = "^0.12.1"
numpy = "^1.26.4"
scikit-learn = "^1.3.0"
scikit-survival = "^0.22.2"
polars = "^0.20.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
