[tool.poetry]
name = "asmbly-data-dashboard"
version = "0.1.0"
description = "High level overview of Asmbly member data built with Dash and Plotly. Includes churn risk ML model for identifying members for interventions."
authors = ["Matthew Miller <matthew.miller@asmbly.org>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
dash = {extras = ["celery", "diskcache"], version = "^2.16.1"}
dash-mantine-components = "^0.12.1"
polars = {extras = ["connectorx", "numpy", "pyarrow"], version = "^0.20.18"}
dash-iconify = "^0.1.2"
gunicorn = "^21.2.0"
sqlalchemy = "^2.0.29"
redis = {extras = ["hiredis"], version = "^5.0.3"}
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
statsmodels = "^0.14.1"
dash-auth = "^2.3.0"
requests = {extras = ["security"], version = "^2.32.1"}
authlib = "^1.3.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.4"
flower = "^2.0.1"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.cron_service.dependencies]
googlemaps = "^4.10.0"
aiohttp = "^3.9.3"
cmake = "^3.29.0.1"
scikit-learn = "1.2.2"
scikit-survival = "0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
